# Tracking_RANSAC

./: CMakeLists.txt  README.md  compilar.sh
cmake/Modules/: FindFFTW.cmake  FindMinuit2.cmake  Findgsl.cmake
include/: LinkDef.hh  event.h  hit.h  lmeds.h  mlesac.h  track.h
src/: event.cc  hit.cc  lmeds.cc  mlesac.cc  ransac.cc  ransac_2Dcircle.cc  track.cc
test/: CMakeLists.txt  compilar.sh  main.cc
test/include/: lmeds.h  mlesac.h  ransac.h  ransac_2Dcircle.h
